--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,6 @@
 .page {
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: 'Inter', helvetica, sans-serif;
+  color: white;
   margin: 0;
+  background-color: #2A2C2F;
 }
