--- a/pages/index.css
+++ b/pages/index.css
@@ -20,4 +20,134 @@
 .empty {
   width: 100%;
   height: 100px;
+  background-color: wheat;
 }
+
+.lead {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  background-color: #2A2C2F;
+  color: white;
+  padding: 0 148px;
+  }
+
+
+.lead__title {
+    font-size: 96px;
+    line-height: 100px;
+    font-weight: 900;
+    text-align: center;
+    max-width: 720px;
+    white-space: pre-line;
+    padding: 60px 0 32px;
+    margin: 0;
+  }
+
+  .lead__subtitle {
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 400;
+    text-align: center;
+    margin: 0;
+    padding: 0 0 64px;
+    max-width: 50%;
+}
+
+.lead__image {
+  width: 984px;
+  height: 615px;
+}
+
+.lead__caption {
+  text-transform: uppercase;
+  font-size: 10px;
+  line-height: 14px;
+  font-weight: 400;
+  padding-top: 8px;
+  margin: 0;
+  /* justify-content: start; */
+  text-align: right;
+}
+
+.intro {
+  max-width: 690px;
+  padding: 92px 0 0 148px;
+  margin: 0;
+}
+  
+.intro__title {
+  font-size: 54px;
+  line-height: 58px;
+  font-weight: 900;
+  text-align: left;
+  max-width: 720px;
+  white-space: pre-line;
+  padding: 0 0 40px;
+  margin: 0;
+}
+
+.intro__text {
+  font-size: 16px;
+  line-height: 26.08px;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
+}
+
+.intro__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 33px 0 92px;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+
+.photo-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;; 
+  grid-template-rows: auto;
+  padding: 0 48px 92px;
+  margin: 0;
+  min-height: 671px;
+  gap: 16px;
+  width: 1280px;
+  box-sizing: border-box;
+}
+
+.photo-grid__item {
+  max-width: 284px;
+  max-height: 213px;
+  object-fit: cover;
+
+}
+
+
+
+  /* @media screen and (max-width: 1184px) {
+    .cover__title {
+      padding: 195px 0 0;
+    }
+  }
+  
+  @media screen and (max-width: 1023px) {
+    .cover__title {
+      padding: 115px 0 0;
+    }
+  }
+  
+  @media screen and (max-width: 767px) {
+    .cover__title {
+      padding: 33px 16px 0 16px;
+      font-size: 32px;
+      line-height: 35px;
+      margin: 0 0 16px;
+    }
+  } */
+
+
+
+  
