--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -46,6 +46,20 @@
 
 @media screen and (max-width: 767px) {
   .cover__item {
+    min-height: 480px;
+  }
+}
+
+
+@media screen and (max-width: 720px) {
+  .cover__item {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .cover__item {
     min-height: 200px;
   }
 }
+
