--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,17 +9,39 @@
     max-width: 30.4%;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1184px) {
     .cover__subtitle {
-    max-width: 46.9%;
+    max-width: 35.15%;
 }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
+    .cover__subtitle {
+    max-width: 35.15%;
+}
+}
+
+/* @media screen and (max-width: 900px) {
     .cover__subtitle {
      padding: 0 16px;
      font-size: 14px;
      line-height: 16px;
+     max-width: 46.9%
+    }  
+} */
+
+@media screen and (max-width: 900px) {
+    .cover__subtitle {
+     padding: 0;
+     font-size: 18px;
+     line-height: 22px;
+     max-width: 46.9%;
+    }  
+}
+
+@media screen and (max-width: 460px) {
+    .cover__subtitle {
      max-width: 90%;
     }  
 }
+
