--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,11 +2,11 @@
   font-size: 72px;
   line-height: 76px;
   font-weight: 900;
-  margin: 0 0 32px;
+  margin: 0 0 32px 0;
   max-width: 560px;
   text-align: center;
-  padding: 245px 0 0;
-  white-space: pre-line;
+  padding: 245px 0 0 0;
+  /* white-space: pre-line; */
 }
 
 @media screen and (max-width: 1184px) {
@@ -22,6 +22,15 @@
 }
 
 @media screen and (max-width: 767px) {
+  .cover__title {
+    padding: 33px 16px 0 16px;
+    font-size: 72px;
+    line-height: 76px;
+    margin: 0 0 16px;
+  }
+}
+
+@media screen and (max-width: 460px) {
   .cover__title {
     padding: 33px 16px 0 16px;
     font-size: 32px;
