--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,17 +2,29 @@
 .header__lang-link a {
   text-decoration: none;
   color: white;
-  padding: 0 12px 6px 0;
-  margin-top: 18px;
+  padding: 0;
+  margin: 18px 0 0 0;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 .header__lang-link:hover a {
   text-decoration: underline;
   transition-duration: 1s;
   opacity: 0.5;
+
+}
+
+.header__lang-link a:active,
+.header__lang-link a:focus {
+  text-decoration: underline;
 }
 
 .header__lang-link:last-child a {
   padding-right: 0;
+}
+
+.header__lang-link:first-child a {
+  /* text-decoration: underline; */
+  padding-right: 12px;
 }
