--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -7,7 +7,8 @@
   padding: 18px 0 0 0;
   line-height: 28px;
   font-size: 24px;
-  font-weight: normal;
+  font-weight: 400;
+  font-style: normal;
   text-decoration: none;
   list-style-type: none;
   box-sizing: border-box;
