--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 
 .header {
-  height: 80px;
-  width: 100%;
+  max-height: 80px;
+  max-width: 1280px;
   background-color: #2A2C2F;
   display: flex;
   justify-content: space-between;
@@ -11,4 +11,17 @@
 }
 
 
-/* padding: 0; */
+
+@media screen and (max-width: 1000px) {
+  .header {
+padding: 28px 24px 0 24px ;
+margin: 0 auto;
+}
+}
+
+@media screen and (max-width: 400px) {
+  .header {
+padding: 16px 16px 0;
+margin: 0 auto;
+}
+}
