--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,3 +3,10 @@
   height: 52px;
   width: 176px;
 }
+
+@media screen and (max-width: 400px) {
+.header__logo {
+  height: 42px;
+  width: 142px;
+  }
+}
