--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -45,3 +45,9 @@
     }  
 }
 
+@media screen and (max-width: 400px) {
+    .cover__subtitle {
+     font-size: 14px;
+     line-height: 16px;
+    }  
+}
