--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,27 +1,24 @@
-
 .header {
   max-height: 80px;
   max-width: 1280px;
-  background-color: #2A2C2F;
+  background-color: #2a2c2f;
   display: flex;
   justify-content: space-between;
-  padding: 28px 48px 0 48px ;
+  padding: 28px 48px 0 48px;
   margin: 0 auto;
   box-sizing: border-box;
 }
 
-
-
 @media screen and (max-width: 1000px) {
   .header {
-padding: 28px 24px 0 24px ;
-margin: 0 auto;
-}
+    padding: 28px 24px 0 24px;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (max-width: 400px) {
   .header {
-padding: 16px 16px 0;
-margin: 0 auto;
-}
+    padding: 16px 16px 0;
+    margin: 0 auto;
+  }
 }
