--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,6 +9,6 @@
 @media screen and (max-width: 400px) {
   .footer__copyright {
     line-height: 14px;
-    margin: 12px 0 0 0;
+    margin: 12px 0 0;
   }
 }
