--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,7 +7,13 @@
   text-decoration: none;
 }
 
-@media screen and (max-width: 400px) {
+.footer__link:hover {
+  transition-duration: 1s;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 500px) {
   .footer__link {
     display: flex;
     flex-direction: column;
