--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -11,13 +11,17 @@
 
 .place__paragraph:last-child {
   padding: 0;
-  margin: 0;
+}
+
+@media screen and (max-width: 1000px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 26.08px;
+  }
 }
 
 @media screen and (max-width: 400px) {
   .place__paragraph {
     padding: 0 0 25px 0;
-    font-size: 16px;
-    line-height: 26.08px;
   }
 }
