--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -11,20 +11,16 @@
 @media screen and (max-width: 1184px) {
   .place__title {
     max-width: 440px;
-    padding: 0;
-    margin: 0;
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   .place__title {
     max-width: 340px;
-    padding: 0;
-    margin: 0;
     font-size: 42px;
     line-height: 46px;
     font-weight: 900;
-    white-space: pre-line;
+    max-width: 90%;
   }
 }
 
