--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.22;
     font-weight: 400;
     text-align: center;
     margin: 0;
@@ -29,7 +29,7 @@
   @media screen and (max-width: 400px) {
     .cover__subtitle {
       font-size: 14px;
-      line-height: 16px;
+      line-height: 1.14;
     }
   }
   
