--- a/blocks/place/__content/place__content.css
+++ b/blocks/place/__content/place__content.css
@@ -7,7 +7,9 @@
 @media screen and (max-width: 400px) {
   .place__content {
     order: 4;
-    margin-top: -14px;
+    margin-top: 10px;
     padding: 0 16px;
+    display: flex;
+    flex-direction: column; 
   }
 }
