--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,6 +7,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 29.34px;
+  box-sizing: border-box;
 }
 
 .place__paragraph:last-child {
@@ -23,5 +24,10 @@
 @media screen and (max-width: 400px) {
   .place__paragraph {
     padding: 0 0 25px 0;
+    display: flex;
+    flex-direction: column;
+  }
+  .place__paragraph:last-child {
+    margin-bottom: 1px;
   }
 }
