--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -21,8 +21,10 @@
 
 @media screen and (max-width: 400px) {
   .place__website  {
+  display: flex;
+  flex-direction: column;
   order: 2;
   padding: 0 16px;
-  margin: -20px 0;
+  margin: 0;
   }
 }
