--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -19,7 +19,6 @@
     column-gap: 32px;
     grid-template-columns: 440px 1fr;
     grid-template-rows: repeat(2, auto);
-    margin: 0 0 70px 0;
   }
 }
 
@@ -36,5 +35,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 50px;
+    column-gap: 5px;
+    row-gap: 25px;
   }
 }
