--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   margin: 0;
   padding: 18px 0 0 0;
+  padding-right: 0px;
   line-height: 28px;
   font-size: 24px;
   font-weight: 400;
