--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,24 +4,35 @@
   font-weight: 900;
   font-style: normal;
   text-align: center;
-  max-width: 73.17%;
-  min-height: 200px;
+  max-width: 76%;
   box-sizing: border-box;
   padding: 0 0 32px 0;
   margin: 0 auto;
 }
 
+@media screen and (max-width: 1000px) {
+  .lead__title {
+    max-width: 95%;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .lead__title {
     margin: 0 24px;
-    max-width: 93.5%;
+    max-width: 99%;
     white-space: pre-line;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .lead__title {
+    max-width: 99%;
+    margin: 0 10px;
   }
 }
 
 @media screen and (max-width: 720px) {
   .lead__title {
-    max-width: 90%;
     font-size: 54px;
     line-height: 58px;
   }
@@ -33,7 +44,6 @@
     font-size: 40px;
     line-height: 44px;
     padding: 0;
-    min-height: 88px;
     max-width: 90%;
   }
 }
