--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -10,4 +10,8 @@
   margin: 0;
   padding: 0;
   background-color: #2A2C2F;
+  min-width: 320px;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0;
 }
