--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -14,6 +14,12 @@
   }
 }
 
+@media screen and (max-width: 660px) {
+  .photo-grid__item {
+    margin: 0 auto;
+  }
+}
+
 @media screen and (max-width: 350px) {
   .photo-grid__item {
     min-width: 288px;
