--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -18,6 +18,13 @@
   }
 }
 
+
+@media screen and (max-width: 630px) {
+  .place__image {
+    margin: 0 auto;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .place__image {
     order: 4;
