--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -12,3 +12,7 @@
   transition-duration: 1s;
   opacity: 0.5;
 }
+
+.header__links .header__list:first-child .header__lang-link {
+  padding-right: 12px;
+}
