--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -20,19 +20,12 @@
   .lead__title {
     margin: 0 24px;
     max-width: 99%;
-    white-space: pre-line;
   }
 }
 
 @media screen and (max-width: 740px) {
   .lead__title {
-    max-width: 99%;
     margin: 0 10px;
-  }
-}
-
-@media screen and (max-width: 720px) {
-  .lead__title {
     font-size: 54px;
     line-height: 58px;
   }
@@ -44,6 +37,17 @@
     font-size: 40px;
     line-height: 44px;
     padding: 0;
-    max-width: 90%;
+    max-width: 288px;
+  }
+}
+
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    margin: 0 16px 16px;
+    font-size: 40px;
+    line-height: 44px;
+    padding: 0;
+    width: 288px;
   }
 }
