--- a/blocks/place/__content/place__content.css
+++ b/blocks/place/__content/place__content.css
@@ -8,6 +8,7 @@
   .place__content {
     order: 4;
     margin-top: 10px;
+    margin-bottom: 50px;
     padding: 0 16px;
     display: flex;
     flex-direction: column; 
