--- a/blocks/place/__content/place__content.css
+++ b/blocks/place/__content/place__content.css
@@ -14,3 +14,10 @@
     flex-direction: column; 
   }
 }
+
+@media screen and (max-width: 400px) {
+  .place:last-child .place__content {
+    margin-bottom: 0;
+  }
+}
+
